<resources>
    <string name="app_name">Camera</string>
    <string name="app_name_video">Camcorder</string>
    <string name="tagssetting_title">Tags</string>
    <string name="camera_button_hint">Press Capture button to take picture.</string>
    <string name="video_camera_button_hint">Press Capture button to take video.</string>
    <string name="start_camcorder_in_call_state">"Camcorder can't be started in Call State"</string>
    <string name="scenes">Scenes</string>
    <string name="effects">Effects</string>
    <string name="settings">Settings</string>
    <string name="exposure">Exposure</string>
    <string name="flash">Flash</string>
    <string name="modes">Switch to</string>
    <string name="Modes">Modes</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="zoom_use">Use volume keys for zooming</string>
    <string name="gallery">Camera Roll</string>
    <string name="no_storage">Please insert SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="wait">Please wait…</string>
    <string name="action_motion">Use for action shots or motion</string>
    <string name="sepia">Sepia</string>
    <string name="singleshot">Single shot</string>
    <string name="multishot">Multi-shot</string>
    <string name="panoramic">Panorama</string>
    <string name="mms">Video Message</string>
    <string name="fastmotion">Fast motion</string>
    <string name="slowmotion">Slow motion</string>
    <string name="video">Video</string>
    <string name="normalvideo">Normal video</string>
    <string name="timelapse">Time lapse</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1000">1 sec</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1500">1.5 secs</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2000">2 secs</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2500">2.5 secs</string>
    <string name="pref_video_time_lapse_frame_interval_entry_3000">3 secs</string>
    <string name="pref_video_time_lapse_frame_interval_entry_5000">5 secs</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10000">10 secs</string>
    <string name="panorama_shots_txt">of</string>
    <string name="panorama_done">Done</string>
    <string name="stitching_msg">Stitching captures</string>
    <string name="toast_move_to_auto_capture">Move to auto-capture next shot</string>
    <string name="toast_open_phone">Open phone for full screen capture</string>
    <string name="toast_open_phone_pan">Open phone for best Panoramic capture</string>
    <string name="toast_storage_in_progress">Storage in progress, please wait...</string>
    <string name="perfecttouch">"Perfect
Touch"</string>
    <string name="share">Share</string>
    <string name="setas">Set As</string>
    <string name="online_album_upload">"Quick
Upload"</string>
    <string name="online_album_caption">Motorola Smartphone</string>
    <string name="delete">Delete</string>
    <string name="attach">Attach</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="retake">Retake</string>
    <string name="btnflash">Flash</string>
    <string name="sendImage">Share picture via</string>
    <string name="setImage">Set picture as</string>
    <string name="video_take">"Take
Video"</string>
    <string name="video_share">Share</string>
    <string name="video_btnlight">Light</string>
    <string name="no_way_to_share_video">Sorry, cannot share selected video</string>
    <string name="tagEditor_hint">Select to add custom tags</string>
    <string name="no_way_to_share_image">This picture cannot be shared.</string>
    <string name="deleteWarning">The picture will be deleted.</string>
    <string name="videodeleteWarning">The video will be deleted.</string>
    <string name="postTouch">Touch image for more options</string>
    <string name="postVideoTouch">Touch video for more options</string>
    <string name="multi_shot_resolution">Capturing images at 1MP resolution</string>
    <string name="settingmenu_title">Camera Settings</string>
    <string name="setting_picResolution">Picture Resolution</string>
    <string name="setting_panoramaResolution">Panorama Resolution</string>
    <string name="setting_videoResolution">Video Resolution</string>
    <string name="setting_volumeKeyFunction">Volume Key Function</string>
    <string name="setting_volumeKeyZoom">Use volume keys to zoom</string>
    <string name="setting_volumeKeyCapture">Use volume keys to capture</string>
    <string name="setting_volumeKeyFunctionExp">Use volume keys to zoom</string>
    <string name="setting_online_album">Quick upload album</string>
    <string name="setting_online_album_summary">Default picture upload account</string>
    <string name="setting_reviewTime">Review Time</string>
    <string name="additionalTags">additional tags</string>
    <string name="setting_enableloc">Enable location in settings</string>
    <string name="setting_imageStabilization">Image Stabilization</string>
    <string name="summary_imageStabilization">Reduce blurring of pictures</string>
    <string name="setting_muteAudioDuringVideoRecording">Mute Audio</string>
    <string name="summary_muteAudioDuringVideoRecording">Mutes audio during video recording</string>
    <string name="setting_iso">ISO equivalent sensitivity</string>
    <string name="setting_exposure">Exposure</string>
    <string name="setting_audioZoomDuringVideoRecording">Audio Zoom</string>
    <string name="summary_audioZoomDuringVideoRecording">Focus microphone on subject while zooming during Video Capture</string>
    <string name="Text_custom_tag">Custom Tags</string>
    <string name="Text_noCustomTag">No custom tags</string>
    <string name="Text_LocationUnknown">Location unknown</string>
    <string name="Text_searchLocation">Locating</string>
    <string name="Text_locationfound">Retrieving city name</string>
    <string name="toast_flashNotAllowed">Flash adjustment not allowed in this scene</string>
    <string name="toast_flashNotAllowed2">Flash adjustment not available in this capture mode</string>
    <string name="toast_sceneNotAllowed">Scene Mode adjustment not allowed in this capture mode</string>
    <string name="toast_lightNotAllowed">Light adjustment not allowed in this scene</string>
    <string name="toast_lightNotAllowed2">Light adjustment not available in this capture mode</string>
    <string name="toast_scenesDisabled">Scenes Disabled</string>
    <string name="toast_PanoramaError">Panorama Capture Failed</string>
    <string name="toast_PanoramaMemoryError">Not enough memory to capture a panoramic picture</string>
    <string name="toast_PanoramaStitchError">Panorama processing failed. Try moving the camera slower between image captures</string>
    <string name="toast_LaunchGalleryFailed">Media Gallery not installed</string>
    <string name="securely_locked_gallery_access_error">Phone is securely locked, Please unlock the phone to launch gallery</string>
    <string name="toast_PlayVideoFailed">Video Player not installed</string>
    <string name="toast_BlurFailed">Service not installed!</string>
    <string name="toast_NotSupported">Not Supported Yet...</string>
    <string name="Text_customtag_warning">Custom tags are empty. Do you want to exit tag setting?</string>
    <string name="warnning">Warning</string>
    <string name="Text_tag_remain">Remaining</string>
    <string name="Text_activeKeywordTags">Active Custom Tags</string>
    <string name="Title_location_setting">Phone Location Settings</string>
    <string name="Message_location_setting">"The global phone location setting must be enabled to use the 'Geo-tag' feature in the camera. Please go to Location services settings and enable the location setting."</string>
    <string name="Message_location_setting_enable">Click OK to enable the phone location settings, or click Cancel to disable the settings.</string>
    <string name="Message_location_setting_continue">Click OK to continue, or click Cancel to disable the settings.</string>
    <string name="One_time_msg_location_setting">"By selecting \"%s\", this device will attach, embed and store geographical location data within each picture. Use caution when you send, share, distribute, transmit or copy these pictures since they contain the location data where the pictures were taken.
"</string>
    <string name="Menu_ToVideo">Camcorder</string>
    <string name="Menu_Tags">Tags</string>
    <string name="Menu_setting">Settings</string>
    <string name="Menu_Panorama">Panorama assist</string>
    <string name="Menu_Camera">Camera</string>
    <string name="web_upload_context">Web Upload addresses not setup. Go to Web Upload Settings to add web upload addresses.</string>
    <string name="online_album_not_setup_text">Would you like to setup your quick upload album now and continue this upload later?</string>
    <string name="web_addr_setting_action">Addresses Setting</string>
    <string name="web_upload_action">Web Upload</string>
    <string name="share_multiple_action">Multiple Share</string>
    <string name="share_single_action">Single Share</string>
    <string name="webaddrssetting_title">Web Upload Setting</string>
    <string name="dialog_web_upload">Web Upload Address:</string>
    <string name="web_add_addrs_title">Add Web Upload Address</string>
    <string name="alert_dialog_ok">Add Address</string>
    <string name="no_web_address_added">No web upload address added</string>
    <string name="web_setting">Yes</string>
    <string name="web_cancel_upload">Cancel</string>
    <string name="web_cancel">No</string>
    <string name="add_account">Add Account...</string>
    <string name="none">None</string>
    <string name="useEmailAddress">Use Email Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="capture_processing">Processing…</string>
    <string name="video_no_space">Memory full or No SD Card, Video Capture time length less than 1s.</string>
    <string name="decode_fail">Oops, Post View unavailable; Back to View Finder now</string>
    <string name="inflate_fail">Camera is unable to initialize</string>
    <string name="open_camera_fail">Camera is unable to initialize</string>
    <string name="open_video_camera_fail">Video Camera is unable to initialize</string>
    <string name="empty" />
    <string name="setting_shutterTone">Shutter Tone</string>
    <string name="summary_shutterTone">Enables playback of shutter tone</string>
    <string name="summary_faceDetection">Take better pictures with people</string>
    <string name="setting_faceDetection">Face Detection</string>
    <string name="resolutionTitleWidescreen">Widescreen</string>
    <string name="setting_shutterAnim">Shutter Animation</string>
    <string name="setting_ShutterAnimSummary">Display shutter animation when capturing images</string>
    <string name="geotag">Geo-tag</string>
    <string name="geotag_summary">Add location information to pictures taken</string>
    <string name="vstab">Video stabilization</string>
    <string name="vstab_summary">Reduces hand shaking during video capture</string>
    <string name="help">Demo</string>
    <string name="help_summary">Demonstration of video stabilization</string>
    <string name="motocast">MotoCast Auto Upload</string>
    <string name="motocast_summary">Automatically upload photos and videos to your remote computer</string>
    <string name="autotimer_select_title">Auto Timer</string>
    <string name="autotimer_3sec">3 Secs</string>
    <string name="autotimer_5sec">5 Secs</string>
    <string name="autotimer_10sec">10 Secs</string>
</resources>