<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/menu_bubble_selected" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="5.0dip" android:text="@string/autotimer_select_title" android:shadowColor="#ff000000" android:shadowDy="-1.0" android:shadowRadius="2.0"
          xmlns:android="http://schemas.android.com/apk/res/android" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_autotimer3s" android:background="@drawable/dialog_menu_bg" android:layout_width="80.0dip" android:layout_height="65.0dip" android:layout_marginLeft="22.0dip" android:text="@string/autotimer_3sec" android:drawableTop="@drawable/ic_menu_time_3" />
            <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_autotimer5s" android:background="@drawable/dialog_menu_bg" android:layout_width="80.0dip" android:layout_height="65.0dip" android:text="@string/autotimer_5sec" android:drawableTop="@drawable/ic_menu_time_5" />
            <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btn_autotimer10s" android:background="@drawable/dialog_menu_bg" android:layout_width="80.0dip" android:layout_height="65.0dip" android:text="@string/autotimer_10sec" android:drawableTop="@drawable/ic_menu_time_10" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
