<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/settingsdialogcontainer" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/settingsviewtitle" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:shadowColor="#ff000000" android:shadowRadius="1.6" />
    <ScrollView android:id="@id/scrollsettings" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="5.0dip" android:layout_below="@id/settingsviewtitle">
        <LinearLayout android:orientation="vertical" android:id="@id/settingelementcontainer" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:id="@id/picresolutioncontainer" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/picresolutioncheckbox" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/picresolutiontextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/picresolutioncheckbox" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/picresolutiontext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resolutionTitleWidescreen" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/picresolutionsummary" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/vidresolutioncontainer" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/picresolutioncheckbox">
                <LinearLayout android:orientation="vertical" android:id="@id/vidresolutiontextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/vidresolutiontext" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_videoResolution" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/vidresolutionselect" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/motocastcontainer" android:paddingTop="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/motocasttextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/motocasttext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motocast" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/motocasthint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motocast_summary" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/volumeKeyFunctionContainer" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/vidresolutioncontainer">
                <LinearLayout android:orientation="vertical" android:id="@id/volumeKeyFunctiontextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/volumeKeyFunctiontext" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_volumeKeyFunction" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/volumeKeyFunctionSelect" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_volumeKeyFunctionExp" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/facedetectioncontainer" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/motocastcontainer">
                <CheckBox android:id="@id/facedetectioncheckbox" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_alignParentRight="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/faceresolutiontextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/facedetectioncheckbox" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/facedetectiontext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_faceDetection" />
                    <TextView android:textSize="15.0sp" android:id="@id/facedetecthint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/summary_faceDetection" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/geotagcontainer" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/facedetectioncontainer">
                <CheckBox android:id="@id/geotagcheckbox" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_alignParentRight="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/geotagtextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/geotagcheckbox" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/geotagtext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geotag" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/geotaghint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geotag_summary" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/vstabcontainer" android:paddingTop="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/geotagcontainer">
                <CheckBox android:id="@id/vstabcheckbox" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_alignParentRight="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/vstabtextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/vstabcheckbox" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/vstabtext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vstab" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/vstabhint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vstab_summary" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/helpcontainer" android:paddingTop="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/helptextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/helptext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/helphint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_summary" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/storageselectioncontainer" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/vidresolutioncontainer">
                <LinearLayout android:orientation="vertical" android:id="@id/storageselectiontextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/storageselectiontext" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/storageselectionselect" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="15.0sp" android:id="@id/storageremainingtext" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/shuttertonecontainer" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/geotagcontainer">
                <CheckBox android:id="@id/shuttertonecheckbox" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_alignParentRight="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/shuttertonetextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/shuttertonecheckbox" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/shuttertonetext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_shutterTone" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/shuttertonehint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/summary_shutterTone" />
                </LinearLayout>
                <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/shutteranimcontainer" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/shuttertonecontainer">
                <CheckBox android:id="@id/shutteranimcheckbox" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_alignParentRight="true" />
                <LinearLayout android:orientation="vertical" android:id="@id/shutteranimtextcontainer" android:paddingLeft="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/shutteranimcheckbox" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/shutteranimtext" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_shutterAnim" android:layout_centerVertical="true" />
                    <TextView android:textSize="15.0sp" android:id="@id/shutteranimhint" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_ShutterAnimSummary" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
